--- a/RPG Game/RPG Game.csproj
+++ b/RPG Game/RPG Game.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Assets\Scripts\Monster1.cs" />
     <Compile Include="Assets\Scripts\Monster2.cs" />
     <Compile Include="Assets\Scripts\Monster3.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
