--- a/RPG Game/Assembly-CSharp.csproj
+++ b/RPG Game/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\Console.cs" />
     <Compile Include="Assets\Scripts\Dungeon.cs" />
     <Compile Include="Assets\Scripts\Griffin.cs" />
+    <Compile Include="Assets\Scripts\Interactions.cs" />
     <Compile Include="Assets\Scripts\Monster.cs" />
     <Compile Include="Assets\Scripts\MonsterDatabase.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
